--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -35,7 +35,7 @@
 					</div>					
 					<div class="form-group">
 		                <label for="kickOffDateString">Datum:</label>
-		                <div class="input-group date form_datetime" data-link-field="kickOffDateString" data-date-format="dd. MM yyyy - HH:ii p">
+		                <div class="input-group date form_datetime" data-link-field="kickOffDateString" data-date-format="dd.mm.yyyy hh:ii" data-link-format="dd.mm.yyyy hh:ii">
 		                    <input class="form-control" size="16" type="text" value="" th:value="${matchCommand.kickOffDateString}" readonly="readonly"/>
 							<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
 		                </div>
