--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -18,21 +18,22 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
-						<label for="teamNameOne">Team 1: *</label> 
-						<input type="text" th:field="*{teamNameOne}" class="form-control" required="required"/>						
-					</div>
+						<label>Spiel:</label><br/>
+						<div class="row">							
+							<div class="col-xs-6">
+								<input type="text" th:field="*{teamNameOne}" class="form-control" required="required"/>
+							</div>
+							<div class="col-xs-6">
+								<input type="text" th:field="*{teamNameTwo}" class="form-control" required="required"/>
+							</div>
+						</div>			
+					</div>			
 					<div class="form-group">
-						<label for="teamResultOne">Anzahl Tore Team 1:</label>
+						<label>Ergebnis:</label><br/>
 						<input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" />
-					</div>
-					<div class="form-group">
-						<label for="teamNameTwo">Team 2: *</label> 
-						<input type="text" th:field="*{teamNameTwo}" class="form-control" required="required"/>						
-					</div>
-					<div class="form-group">
-						<label for="teamResultTwo">Anzahl Tore Team 2:</label>
+						<span>:</span>
 						<input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" />
-					</div>					
+					</div>										
 					<div class="form-group">
 		                <label for="kickOffDateString">Anstoß:</label>
 		                <div class="input-group date form_datetime" data-link-field="kickOffDateString" data-date-format="dd.mm.yyyy hh:ii" data-link-format="dd.mm.yyyy hh:ii">
