--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -21,10 +21,10 @@
 						<label>Spiel:</label><br/>
 						<div class="row">							
 							<div class="col-xs-6">
-								<input type="text" th:field="*{teamNameOne}" class="form-control" required="required"/>
+								<input type="text" th:field="*{teamNameOne}" class="form-control" />
 							</div>
 							<div class="col-xs-6">
-								<input type="text" th:field="*{teamNameTwo}" class="form-control" required="required"/>
+								<input type="text" th:field="*{teamNameTwo}" class="form-control" />
 							</div>
 						</div>			
 					</div>			
@@ -44,7 +44,7 @@
 		            </div>					
 					<div class="form-group">
 						<label for="teamResultTwo">Stadion:</label>
-						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. Westfalenstadion" required="required"/>
+						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. Westfalenstadion" />
 					</div>					
 					<div class="form-group">
 						<label for="teamResultTwo">Gruppierung:</label>
