--- a/src/main/resources/templates/user/change_password.html
+++ b/src/main/resources/templates/user/change_password.html
@@ -12,15 +12,15 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">										
 					<div class="form-group">
 						<label for="password">altes Passwort:</label> 
-						<input type="password" th:field="*{oldPassword}" class="form-control" required="required"/>
+						<input type="password" th:field="*{oldPassword}" class="form-control" />
 					</div>
 					<div class="form-group">
 						<label for="password">neues Passwort:</label> 
-						<input type="password" th:field="*{newPassword}" class="form-control" required="required"/>
+						<input type="password" th:field="*{newPassword}" class="form-control" />
 					</div>
 					<div class="form-group">
 						<label for="password">neues Passwort wiederholen:</label> 
-						<input type="password" th:field="*{newPasswordRepeat}" class="form-control" required="required"/>
+						<input type="password" th:field="*{newPasswordRepeat}" class="form-control" />
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
