--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -13,7 +13,8 @@
 				<div class="panel panel-default">					
 					<div class="panel-body user-panel-body">
 						<div class="row">
-							<div class="col-xs-7">
+							<div class="col-xs-7 user-label">
+								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 								<span class="bold" th:text="${user.username}">Bert</span>							  		
 				  			</div>
 				  			<div class="col-xs-5">
