--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -56,7 +56,7 @@
 				            						<span class="glyphicon glyphicon-pencil"></span>
 				            				 </a>
 				            				 <a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}}" th:classappend="${!matchCommand.isBettable()}? 'disabled'" 
-												   class="btn btn-info" role="button" title="Spiel tippen">
+												   class="btn btn-success" role="button" title="Spiel tippen">
 													<span class="glyphicon glyphicon-hand-up"></span>
 											 </a>
 							        </div>						  			
