--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -15,12 +15,12 @@
 						<div class="row">
 							<div class="col-xs-7 user-label">
 								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-								<span class="bold" th:text="${user.username}">Bert</span>							  		
+								<span th:text="${user.username}">Bert</span>							  		
 				  			</div>
 				  			<div class="col-xs-5">
 				  				<div class="row custom-button-group">
 				  					<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
-				  					<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-remove"></span></a>								    
+				  					<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-danger" role="button"><span class="glyphicon glyphicon-remove"></span></a>								    
 								</div>
 				  			</div>				  				
       					</div>
