--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -20,7 +20,9 @@
 				  			<div class="col-xs-5">
 				  				<div class="row custom-button-group">
 				  					<a href="#" th:href="@{'/user/' + ${user.id}}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
-				  					<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-danger" role="button"><span class="glyphicon glyphicon-remove"></span></a>								    
+				  					<a href="#" th:href="@{'/user/' + ${user.id} + '/delete'}" class="btn btn-danger" role="button" th:classappend="${!user.isDeletable()}? 'disabled'">
+				  						<span class="glyphicon glyphicon-remove"></span>
+			  						</a>	
 								</div>
 				  			</div>				  				
       					</div>
