--- a/src/main/resources/templates/buildinfo.html
+++ b/src/main/resources/templates/buildinfo.html
@@ -9,7 +9,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<div class="panel">
-					<span class="currentTime label label-default" th:text="${currentDateTime} + ', ' + | ${timeZone}"/>
+					<span class="currentTime label label-default" th:text="${currentDateTime} + ', ' + | ${timeZone}"></span>
 				</div>								
 			</div>			
 		</div>
