--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -44,7 +44,7 @@
 		            </div>					
 					<div class="form-group">
 						<label for="teamResultTwo">Stadion:</label>
-						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. Westfalenstadion" />
+						<input type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. St. Denis, Paris" />
 					</div>					
 					<div class="form-group">
 						<label for="teamResultTwo">Gruppierung:</label>
