added function to create test results

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -12,6 +12,8 @@
 				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoMatches}">EM 2016 Gruppenspiele anlegen</a>
 				<br/><br/>
 				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}">Testtipps für alle Benutzer anlegen</a>
+				<br/><br/>
+				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}">Testergebnisse für alle Benutzer erzeugen</a>
 			</div>
 		</div>
 	</div>
