--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -20,7 +20,7 @@
 				<ul th:if="${@securityBean.isUserLoggedIn()}" class="nav navbar-nav">
 					<li th:class="${pageState_matches_upcoming}"><a href="#matchesUpcoming" th:href="@{/matches/upcoming}" th:text="#{upcoming.matches}">Upcoming Matches</a></li>
 					<li th:class="${pageState_matches}"><a href="#matches" th:href="@{/matches}" th:text="#{all.matches}">Matches</a></li>
-					<li class="dropdown">
+					<li class="dropdown" th:classappend="${pageState_group}">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="#{groups}">Groups<span class="caret"></span></a>
 			          <ul class="dropdown-menu">
 			            <li th:class="${pageState_GROUP_A}"><a href="#matches" th:href="@{/matches/group/GROUP_A}" th:text="#{group} + ' A'">Group A</a></li>
@@ -31,7 +31,7 @@
 			            <li th:class="${pageState_GROUP_F}"><a href="#matches" th:href="@{/matches/group/GROUP_F}" th:text="#{group} + ' F'">Group F</a></li>			            			            
 			          </ul>
 			        </li>
-			        <li class="dropdown">
+			        <li class="dropdown" th:classappend="${pageState_finals}">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="#{finals}">Finals<span class="caret"></span></a>
 			          <ul class="dropdown-menu">
 			            <li th:class="${pageState_ROUND_OF_SIXTEEN}"><a href="#matches" th:href="@{/matches/group/ROUND_OF_SIXTEEN}">Achtelfinale</a></li>
