bugfix change password

--- a/src/main/resources/templates/userprofile/change_password.html
+++ b/src/main/resources/templates/userprofile/change_password.html
@@ -7,7 +7,7 @@
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}">Some Success message</div>
-		<form id="changePasswordForm" th:action="@{/user/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
+		<form id="changePasswordForm" th:action="@{/userprofile/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">										
 					<div class="form-group">
