--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -50,12 +50,12 @@
 					<li th:if="${@securityBean.isUserLoggedIn()} == false">
 						<a href="#login" th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a>
 					</li>
-					<li th:if="${@securityBean.isUserLoggedIn()} == true" class="dropdown">
+					<li th:if="${@securityBean.isUserLoggedIn()} == true" class="dropdown" th:classappend="${pageState_userprofile}">
 						<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="glyphicon glyphicon-user"></span> <span sec:authentication="name">Bob</span><span class="caret"></span>
                         </a>
 						<ul class="dropdown-menu">
-							<li th:class="${pageState_user_changePassword}"><a href="#changePassword" th:href="@{/user/changePassword}">Passwort ändern</a></li>
+							<li th:class="${pageState_userprofile_changePassword}"><a href="#changePassword" th:href="@{/userprofile/changePassword}">Passwort ändern</a></li>
 							<li>
                                 <a href="/logout" th:href="@{#}" onclick="$('#form').submit();">
                                     <span class="glyphicon glyphicon-log-out"></span> Logout</a>
