bugfix field labeling

--- a/src/main/resources/templates/userprofile/change_password.html
+++ b/src/main/resources/templates/userprofile/change_password.html
@@ -11,15 +11,15 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">										
 					<div class="form-group">
-						<label for="password">altes Passwort:</label> 
+						<label for="oldPassword">altes Passwort:</label> 
 						<input type="password" th:field="*{oldPassword}" class="form-control" />
 					</div>
 					<div class="form-group">
-						<label for="password">neues Passwort:</label> 
+						<label for="newPassword">neues Passwort:</label> 
 						<input type="password" th:field="*{newPassword}" class="form-control" />
 					</div>
 					<div class="form-group">
-						<label for="password">neues Passwort wiederholen:</label> 
+						<label for="newPasswordRepeat">neues Passwort wiederholen:</label> 
 						<input type="password" th:field="*{newPasswordRepeat}" class="form-control" />
 					</div>
 					<div class="form-group">
