--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -22,7 +22,7 @@
 					<ul class="list-group">
 						<li class="list-group-item" th:each="role : ${userCommand.availableRoles}">
 							<input type="checkbox" th:field="*{roles}" th:value="${role}" /> 
-							<label th:for="${#ids.prev('roles')}" th:text="${role}">ROLE_USER</label>
+							<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
 						</li>
 					</ul>
 					<div class="form-group">
