--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -21,13 +21,13 @@
 							<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
 						</li>
 					</ul>
-					<div class="form-group" sec:authorize="hasRole('ROLE_ADMIN')">
+					<div class="form-group" sec:authorize="hasAuthority('PERM_PASSWORD_RESET')">
 						<input type="checkbox" th:field="*{resetPassword}" th:value="true" /> 
 						<label for="resetPassword">Passwort zurücksetzen</label> 
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
-						<a sec:authorize="hasRole('ROLE_ADMIN')" href="#" th:href="@{'/user/' + ${userCommand.userId} + '/delete'}" 
+						<a sec:authorize="hasAuthority('PERM_DELETE_USER')" href="#" th:href="@{'/user/' + ${userCommand.userId} + '/delete'}" 
 							class="btn btn-danger" role="button" th:classappend="${!userCommand.isDeletable()}? 'disabled'">Löschen</a>
 						<a href="#" th:href="@{/user}" class="btn btn-default" role="button">Abbrechen</a>	
 					</div>
