--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -5,19 +5,19 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Layout</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/3.3.5/css/bootstrap.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" th:href="@{/webjars/bootstrap/3.3.5/css/bootstrap-theme.min.css}" />
-		<link href="../../static/css/bootstrap-datetimepicker.min.css" th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet" media="screen"/>	
-		<link rel="stylesheet" href="../static/css/custom.css" th:href="@{/css/custom.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap-theme.min.css}" />
+		<link rel="stylesheet" th:href="@{/css/bootstrap-datetimepicker.min.css}"  media="screen"/>	
+		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 	</head>
 <body>
 	<nav th:include="_navigation :: menu" class="navbar navbar-inverse navbar-fixed-top"></nav>
 	<div class="container" role="main">		
 		<div layout:fragment="content" class="container" role="main" style="padding-top: 70px;">Content Placeholder</div>
 	</div>
-	<script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
-	<script src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.5/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/3.3.5/js/bootstrap.min.js}"></script>	
+	<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+	<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>	
 	<script type="text/javascript" src="../../static/js/bootstrap-datetimepicker.js" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
 	<script type="text/javascript" src="../../static/js/bootstrap-datetimepicker.de.js" th:src="@{/js/bootstrap-datetimepicker.de.js}" charset="UTF-8"></script>
 	<script type="text/javascript" src="../../static/js/datepicker-selection.js" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>
